--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -2,10 +2,10 @@
 
 .gallery-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
     justify-content: center;
     align-items: center;
-    gap: 5px;
+
     /* transition: 0.4s; */
 }
 
