--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import 'components/filter.css';
 @import 'components/editor.css';
 @import 'components/gallery.css';
+@import 'components/memes.css';
 
 
 /* MEDIA QUERY */
